force-app/main/default/objects/Deal_Implementation_Handoff__c/Deal_Implementation_Handoff__c.object-meta.xml
<CustomObject>
<label
  >Deal Implementation Handoff</label><pluralLabel
  >Deal Implementation Handoffs</pluralLabel>
    <nameField><displayFormat>DIH-{00000000}</displayFormat><label
    >Handoff Number</label><type>AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities><enableHistory
  >true</enableHistory>
</CustomObject>