force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Commercial_Summary__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Summary__c</fullName>
    <label>Commercial Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>