force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Customer_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Customer_Objectives__c</fullName>
    <label>Customer Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>