force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Delivery_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Owner__c</fullName>
    <label>Delivery Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Delivery-Owned Handoffs</relationshipLabel>
    <relationshipName>Delivery_Owned_Handoffs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>