force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <label>Implementation</label>
    <type>Lookup</type>
    <referenceTo>Deal_Implementation__c</referenceTo>
    <relationshipLabel>Handoffs</relationshipLabel>
    <relationshipName>Handoffs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>