force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Key_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Key_Assumptions__c</fullName>
    <label>Key Assumptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>