force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Known_Risks__c.field-meta.xml
<CustomField>
    <fullName>Known_Risks__c</fullName>
    <label>Known Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>