force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requested Handoffs</relationshipLabel>
    <relationshipName>Requested_Handoffs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>