force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Required_Evidence_Complete__c.field-meta.xml
<CustomField>
    <fullName>Required_Evidence_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Evidence Complete</label>
    <type>Checkbox</type>
</CustomField>