force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Returned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Returned_Reason__c</fullName>
    <label>Returned Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>