force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner__c</fullName>
    <label>Sales Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales-Owned Handoffs</relationshipLabel>
    <relationshipName>Sales_Owned_Handoffs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>