force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Scope_Summary__c.field-meta.xml
<CustomField>
    <fullName>Scope_Summary__c</fullName>
    <label>Scope Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>