force-app/main/default/objects/Deal_Implementation_Handoff__c/fields/Solution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Solution_Summary__c</fullName>
    <label>Solution Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>